<resources>
    <string name="app_name">Sirius</string>
    <string name="gameName">DoTA 2</string>
    <string name="viewsNumber">70M</string>
    <string name="description">Dota 2 is a multiplayer online battle arena (MOBA) game which has two teams of five players compete to collectively destroy a large structure defended by the opposing team known as the &quot;Ancient&quot;, whilst defending their own.</string>
    <string name="comment1">“Once you start to learn its secrets, there’s a wild and exciting variety of play here that’s unmatched, even by its peers.”</string>
    <string name="comment2">“Once you start to learn its secrets, there’s a wild and exciting variety of play here that’s unmatched, even by its peers.”</string>
    <string name="install">Install</string>
    <string name="dateComment">February 14, 2019</string>
    <string name="rating">4.9</string>
</resources>