<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#100422"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/mainPicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_marginTop="-50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/main_picture" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/backFloatingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:clickable="true"
        app:backgroundTint="@color/transparent_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_button"
        app:tint="@color/white" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/moreFloatingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="36dp"
        android:clickable="true"
        app:backgroundTint="@color/transparent_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/more_button"
        app:tint="@color/white" />

    <FrameLayout
        android:id="@+id/frameWithLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="-70dp"
        android:background="@drawable/radius"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainPicture">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@drawable/logo_picture" />
    </FrameLayout>

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/sk_modernist"
        android:text="@string/gameName"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toEndOf="@+id/frameWithLogo"
        app:layout_constraintTop_toTopOf="@+id/frameWithLogo" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:numStars="5"
        android:progressTint="@color/yellow"
        android:rating="4.9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toEndOf="@+id/frameWithLogo"
        app:layout_constraintTop_toBottomOf="@+id/appName" />

    <TextView
        android:id="@+id/viewsNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sk_modernist"
        android:text="@string/viewsNumber"
        android:textColor="@color/light_gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toEndOf="@+id/ratingBar"
        app:layout_constraintTop_toTopOf="@+id/ratingBar" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameWithLogo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="true"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:isScrollContainer="true">

                <TextView
                    android:id="@+id/tag1"
                    android:layout_width="53dp"
                    android:layout_height="22dp"
                    android:background="@drawable/item_tag"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="MOBA"
                    android:textColor="@color/tagTV"
                    android:textSize="10sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tag2"
                    android:layout_width="93dp"
                    android:layout_height="22dp"
                    android:background="@drawable/item_tag"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="MULTIPLAYER"
                    android:textColor="@color/tagTV"
                    android:textSize="10sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.073"
                    app:layout_constraintStart_toEndOf="@+id/tag1"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tag3"
                    android:layout_width="73dp"
                    android:layout_height="22dp"
                    android:background="@drawable/item_tag"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="STRATEGY"
                    android:textColor="@color/tagTV"
                    android:textSize="10sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.126"
                    app:layout_constraintStart_toEndOf="@+id/tag2"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/sk_modernist"
                    android:lineHeight="19dp"
                    android:text="@string/description"
                    android:textColor="@color/light_gray"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tag2" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:isScrollContainer="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/reviewAndRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/sk_modernist"
                    android:text="Review &amp; Ratings"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/bigRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sk_modernist"
                    android:gravity="center"
                    android:text="@string/rating"
                    android:textColor="@color/white"
                    android:textSize="48sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/reviewAndRating" />

                <RatingBar
                    android:id="@+id/ratingBar2"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:numStars="5"
                    android:progressTint="@color/yellow"
                    android:rating="4.9"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.06"
                    app:layout_constraintStart_toEndOf="@+id/bigRating"
                    app:layout_constraintTop_toTopOf="@+id/bigRating" />

                <TextView
                    android:id="@+id/reviewsNumber"
                    android:layout_width="76dp"
                    android:layout_height="14dp"
                    android:layout_marginTop="3dp"
                    android:fontFamily="@font/sk_modernist"
                    android:gravity="center"
                    android:lineHeight="14.4dp"
                    android:text="69K Reviews"
                    android:textColor="#A8ADB7"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="@+id/ratingBar2"
                    app:layout_constraintTop_toBottomOf="@+id/ratingBar2" />

                <View
                    android:id="@+id/split"
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:layout_marginTop="24dp"
                    android:background="#1A1F29"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/bigRating" />

                <ImageView
                    android:id="@+id/userPicture1"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/split"
                    app:srcCompat="@drawable/face1" />

                <TextView
                    android:id="@+id/userName1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:fontFamily="@font/sk_modernist"
                    android:gravity="center"
                    android:lineHeight="19.2dp"
                    android:text="Auguste Conte"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/userPicture1"
                    app:layout_constraintTop_toTopOf="@+id/userPicture1" />

                <TextView
                    android:id="@+id/userDate1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/sk_modernist"
                    android:gravity="center"
                    android:text="@string/dateComment"
                    android:textColor="#66FFFFFF"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="@+id/userName1"
                    app:layout_constraintTop_toBottomOf="@+id/userName1" />

                <TextView
                    android:id="@+id/userComment1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/sk_modernist"
                    android:gravity="fill_horizontal"
                    android:lineHeight="20dp"
                    android:text="@string/comment1"
                    android:textColor="@color/light_gray"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/userPicture1" />

                <ImageView
                    android:id="@+id/userPicture2"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/userComment1"
                    app:srcCompat="@drawable/face2" />

                <TextView
                    android:id="@+id/userName2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:fontFamily="@font/sk_modernist"
                    android:gravity="center"
                    android:lineHeight="19.2dp"
                    android:text="Jang Marcelino"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/userPicture2"
                    app:layout_constraintTop_toTopOf="@+id/userPicture2" />

                <TextView
                    android:id="@+id/userDate2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/sk_modernist"
                    android:gravity="center"
                    android:text="@string/dateComment"
                    android:textColor="#66FFFFFF"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="@+id/userName2"
                    app:layout_constraintTop_toBottomOf="@+id/userName2" />

                <TextView
                    android:id="@+id/userComment2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/sk_modernist"
                    android:gravity="fill_horizontal"
                    android:lineHeight="20dp"
                    android:text="@string/comment2"
                    android:textColor="@color/light_gray"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/userPicture2" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/installButton"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:backgroundTint="@color/yellow"
                android:bottomLeftRadius="20dp"
                android:bottomRightRadius="20dp"
                android:lineHeight="24dp"
                android:text="@string/install"
                android:textAppearance="@style/Widget.Material3.Button"
                android:textColor="#050B18"
                android:textSize="20sp"
                android:topLeftRadius="20dp"
                android:topRightRadius="20dp"
                app:fontFamily="@font/sk_modernist"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userComment2" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>